update main.dox to link ud dox page

--- a/google/cloud/datacatalog/doc/main.dox
+++ b/google/cloud/datacatalog/doc/main.dox
@@ -46,6 +46,7 @@ application.
 - @ref datacatalog-override-retry - describes how to change the default retry
   policies.
 - @ref datacatalog-env - describes environment variables that can configure the behavior of the library.
+- @ref datacatalog-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/data-catalog
 
