--- a/google/cloud/appengine/doc/main.dox
+++ b/google/cloud/appengine/doc/main.dox
@@ -50,6 +50,7 @@ application.
 - @ref appengine-override-retry - describes how to change the default retry
   policies.
 - @ref appengine-env - describes environment variables that can configure the behavior of the library.
+- @ref appengine-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/appengine/docs/admin-api
 
