--- a/google/cloud/artifactregistry/doc/main.dox
+++ b/google/cloud/artifactregistry/doc/main.dox
@@ -39,6 +39,7 @@ application.
 - @ref artifactregistry-override-retry - describes how to change the default retry
   policies.
 - @ref artifactregistry-env - describes environment variables that can configure the behavior of the library.
+- @ref artifactregistry-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/artifact-registry
 
