--- a/google/cloud/baremetalsolution/doc/main.dox
+++ b/google/cloud/baremetalsolution/doc/main.dox
@@ -39,6 +39,7 @@ application.
 - @ref baremetalsolution-override-retry - describes how to change the default retry
   policies.
 - @ref baremetalsolution-env - describes environment variables that can configure the behavior of the library.
+- @ref baremetalsolution-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/bare-metal
 
