--- a/google/cloud/beyondcorp/doc/main.dox
+++ b/google/cloud/beyondcorp/doc/main.dox
@@ -48,6 +48,7 @@ application.
 - @ref beyondcorp-override-retry - describes how to change the default retry
   policies.
 - @ref beyondcorp-env - describes environment variables that can configure the behavior of the library.
+- @ref beyondcorp-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/beyondcorp
 
