--- a/google/cloud/composer/doc/main.dox
+++ b/google/cloud/composer/doc/main.dox
@@ -44,6 +44,7 @@ application.
 - @ref composer-override-retry - describes how to change the default retry
   policies.
 - @ref composer-env - describes environment variables that can configure the behavior of the library.
+- @ref composer-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/composer
 
