--- a/google/cloud/connectors/doc/main.dox
+++ b/google/cloud/connectors/doc/main.dox
@@ -40,6 +40,7 @@ application.
 - @ref connectors-override-retry - describes how to change the default retry
   policies.
 - @ref connectors-env - describes environment variables that can configure the behavior of the library.
+- @ref connectors-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/apigee/docs/api-platform/connectors/about-connectors
 
