--- a/google/cloud/datastream/doc/main.dox
+++ b/google/cloud/datastream/doc/main.dox
@@ -41,6 +41,7 @@ application.
 - @ref datastream-override-retry - describes how to change the default retry
   policies.
 - @ref datastream-env - describes environment variables that can configure the behavior of the library.
+- @ref datastream-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/datastream
 
