--- a/google/cloud/deploy/doc/main.dox
+++ b/google/cloud/deploy/doc/main.dox
@@ -39,6 +39,7 @@ application.
 - @ref deploy-override-retry - describes how to change the default retry
   policies.
 - @ref deploy-env - describes environment variables that can configure the behavior of the library.
+- @ref deploy-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/deploy
 
