--- a/google/cloud/dialogflow_cx/doc/main.dox
+++ b/google/cloud/dialogflow_cx/doc/main.dox
@@ -62,6 +62,7 @@ application.
 - @ref dialogflow_cx-override-retry - describes how to change the default retry
   policies.
 - @ref dialogflow_cx-env - describes environment variables that can configure the behavior of the library.
+- @ref dialogflow_cx-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/dialogflow/cx/docs
 
