--- a/google/cloud/edgecontainer/doc/main.dox
+++ b/google/cloud/edgecontainer/doc/main.dox
@@ -41,6 +41,7 @@ application.
 - @ref edgecontainer-override-retry - describes how to change the default retry
   policies.
 - @ref edgecontainer-env - describes environment variables that can configure the behavior of the library.
+- @ref edgecontainer-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/distributed-cloud/edge/latest/docs
 
