--- a/google/cloud/functions/doc/main.dox
+++ b/google/cloud/functions/doc/main.dox
@@ -46,6 +46,7 @@ application.
 - @ref functions-override-retry - describes how to change the default retry
   policies.
 - @ref functions-env - describes environment variables that can configure the behavior of the library.
+- @ref functions-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/functions
 
