--- a/google/cloud/ids/doc/main.dox
+++ b/google/cloud/ids/doc/main.dox
@@ -43,6 +43,7 @@ application.
 - @ref ids-override-retry - describes how to change the default retry
   policies.
 - @ref ids-env - describes environment variables that can configure the behavior of the library.
+- @ref ids-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/ids
 
