--- a/google/cloud/managedidentities/doc/main.dox
+++ b/google/cloud/managedidentities/doc/main.dox
@@ -40,6 +40,7 @@ application.
 - @ref managedidentities-override-retry - describes how to change the default retry
   policies.
 - @ref managedidentities-env - describes environment variables that can configure the behavior of the library.
+- @ref managedidentities-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/managed-microsoft-ad
 
