--- a/google/cloud/monitoring/doc/main.dox
+++ b/google/cloud/monitoring/doc/main.dox
@@ -55,6 +55,7 @@ application.
 - @ref monitoring-override-retry - describes how to change the default retry
   policies.
 - @ref monitoring-env - describes environment variables that can configure the behavior of the library.
+- @ref monitoring-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/monitoring
 
