--- a/google/cloud/oslogin/doc/main.dox
+++ b/google/cloud/oslogin/doc/main.dox
@@ -39,6 +39,7 @@ application.
 - @ref oslogin-override-retry - describes how to change the default retry
   policies.
 - @ref oslogin-env - describes environment variables that can configure the behavior of the library.
+- @ref oslogin-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/compute/docs/oslogin
 
