--- a/google/cloud/privateca/doc/main.dox
+++ b/google/cloud/privateca/doc/main.dox
@@ -41,6 +41,7 @@ application.
 - @ref privateca-override-retry - describes how to change the default retry
   policies.
 - @ref privateca-env - describes environment variables that can configure the behavior of the library.
+- @ref privateca-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/certificate-authority-service/docs
 
