--- a/google/cloud/scheduler/doc/main.dox
+++ b/google/cloud/scheduler/doc/main.dox
@@ -39,5 +39,6 @@ application.
 - @ref scheduler-override-retry - describes how to change the default retry
   policies.
 - @ref scheduler-env - describes environment variables that can configure the behavior of the library.
+- @ref scheduler-override-universe-domain - describes how to override the default universe domain.
 
 */
