--- a/google/cloud/storageinsights/doc/main.dox
+++ b/google/cloud/storageinsights/doc/main.dox
@@ -40,6 +40,7 @@ application.
 - @ref storageinsights-override-retry - describes how to change the default retry
   policies.
 - @ref storageinsights-env - describes environment variables that can configure the behavior of the library.
+- @ref storageinsights-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/storage/docs/insights/inventory-reports
 
