--- a/google/cloud/storagetransfer/doc/main.dox
+++ b/google/cloud/storagetransfer/doc/main.dox
@@ -39,6 +39,7 @@ application.
 - @ref storagetransfer-override-retry - describes how to change the default retry
   policies.
 - @ref storagetransfer-env - describes environment variables that can configure the behavior of the library.
+- @ref storagetransfer-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/storage-transfer
 
