--- a/google/cloud/texttospeech/doc/main.dox
+++ b/google/cloud/texttospeech/doc/main.dox
@@ -39,6 +39,7 @@ application.
 - @ref texttospeech-override-retry - describes how to change the default retry
   policies.
 - @ref texttospeech-env - describes environment variables that can configure the behavior of the library.
+- @ref texttospeech-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/text-to-speech
 
