--- a/google/cloud/translate/doc/main.dox
+++ b/google/cloud/translate/doc/main.dox
@@ -38,6 +38,7 @@ application.
 - @ref translate-override-retry - describes how to change the default retry
   policies.
 - @ref translate-env - describes environment variables that can configure the behavior of the library.
+- @ref translate-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/translate
 
