--- a/google/cloud/vpcaccess/doc/main.dox
+++ b/google/cloud/vpcaccess/doc/main.dox
@@ -38,6 +38,7 @@ application.
 - @ref vpcaccess-override-retry - describes how to change the default retry
   policies.
 - @ref vpcaccess-env - describes environment variables that can configure the behavior of the library.
+- @ref vpcaccess-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/vpc/docs/serverless-vpc-access
 
