--- a/google/cloud/workflows/doc/main.dox
+++ b/google/cloud/workflows/doc/main.dox
@@ -45,5 +45,6 @@ application.
 - @ref workflows-override-retry - describes how to change the default retry
   policies.
 - @ref workflows-env - describes environment variables that can configure the behavior of the library.
+- @ref workflows-override-universe-domain - describes how to override the default universe domain.
 
 */
