--- a/google/cloud/advisorynotifications/doc/main.dox
+++ b/google/cloud/advisorynotifications/doc/main.dox
@@ -39,6 +39,7 @@ application.
 - @ref advisorynotifications-override-retry - describes how to change the default retry
   policies.
 - @ref advisorynotifications-env - describes environment variables that can configure the behavior of the library.
+- @ref advisorynotifications-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/advisory-notifications
 
