--- a/google/cloud/alloydb/doc/main.dox
+++ b/google/cloud/alloydb/doc/main.dox
@@ -50,6 +50,7 @@ application.
 - @ref alloydb-override-retry - describes how to change the default retry
   policies.
 - @ref alloydb-env - describes environment variables that can configure the behavior of the library.
+- @ref alloydb-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/alloydb
 
