--- a/google/cloud/apigateway/doc/main.dox
+++ b/google/cloud/apigateway/doc/main.dox
@@ -38,6 +38,7 @@ application.
 - @ref apigateway-override-retry - describes how to change the default retry
   policies.
 - @ref apigateway-env - describes environment variables that can configure the behavior of the library.
+- @ref apigateway-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/api-gateway
 
