--- a/google/cloud/apigeeconnect/doc/main.dox
+++ b/google/cloud/apigeeconnect/doc/main.dox
@@ -42,6 +42,7 @@ application.
 - @ref apigeeconnect-override-retry - describes how to change the default retry
   policies.
 - @ref apigeeconnect-env - describes environment variables that can configure the behavior of the library.
+- @ref apigeeconnect-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/apigee/docs/hybrid/
 
