--- a/google/cloud/asset/doc/main.dox
+++ b/google/cloud/asset/doc/main.dox
@@ -39,6 +39,7 @@ application.
 - @ref asset-override-retry - describes how to change the default retry
   policies.
 - @ref asset-env - describes environment variables that can configure the behavior of the library.
+- @ref asset-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/asset-inventory
 
