--- a/google/cloud/automl/doc/main.dox
+++ b/google/cloud/automl/doc/main.dox
@@ -45,6 +45,7 @@ application.
 - @ref automl-override-retry - describes how to change the default retry
   policies.
 - @ref automl-env - describes environment variables that can configure the behavior of the library.
+- @ref automl-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/automl
 
