--- a/google/cloud/batch/doc/main.dox
+++ b/google/cloud/batch/doc/main.dox
@@ -37,6 +37,7 @@ application.
 - @ref batch-override-retry - describes how to change the default retry
   policies.
 - @ref batch-env - describes environment variables that can configure the behavior of the library.
+- @ref batch-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/batch
 
