--- a/google/cloud/bigquery/doc/main.dox
+++ b/google/cloud/bigquery/doc/main.dox
@@ -52,6 +52,7 @@ application.
 - @ref bigquery-override-retry - describes how to change the default retry
   policies.
 - @ref bigquery-env - describes environment variables that can configure the behavior of the library.
+- @ref bigquery-override-universe-domain - describes how to override the default universe domain.
 - @ref bigquery-read-mock
 
 [resource-link]: https://console.cloud.google.com/cloud-resource-manager 'Console Resource Manager'
