--- a/google/cloud/certificatemanager/doc/main.dox
+++ b/google/cloud/certificatemanager/doc/main.dox
@@ -39,6 +39,7 @@ application.
 - @ref certificatemanager-override-retry - describes how to change the default retry
   policies.
 - @ref certificatemanager-env - describes environment variables that can configure the behavior of the library.
+- @ref certificatemanager-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/certificate-manager
 
