--- a/google/cloud/compute/doc/main.dox
+++ b/google/cloud/compute/doc/main.dox
@@ -148,6 +148,7 @@ application.
 - @ref compute-override-retry - describes how to change the default retry
   policies.
 - @ref compute-env - describes environment variables that can configure the behavior of the library.
+- @ref compute-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/compute
 */
