--- a/google/cloud/confidentialcomputing/doc/main.dox
+++ b/google/cloud/confidentialcomputing/doc/main.dox
@@ -39,6 +39,7 @@ application.
 - @ref confidentialcomputing-override-retry - describes how to change the default retry
   policies.
 - @ref confidentialcomputing-env - describes environment variables that can configure the behavior of the library.
+- @ref confidentialcomputing-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/confidential-computing
 
