--- a/google/cloud/contactcenterinsights/doc/main.dox
+++ b/google/cloud/contactcenterinsights/doc/main.dox
@@ -39,6 +39,7 @@ application.
 - @ref contactcenterinsights-override-retry - describes how to change the default retry
   policies.
 - @ref contactcenterinsights-env - describes environment variables that can configure the behavior of the library.
+- @ref contactcenterinsights-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/contact-center/insights/docs
 
