--- a/google/cloud/containeranalysis/doc/main.dox
+++ b/google/cloud/containeranalysis/doc/main.dox
@@ -46,6 +46,7 @@ application.
 - @ref containeranalysis-override-retry - describes how to change the default retry
   policies.
 - @ref containeranalysis-env - describes environment variables that can configure the behavior of the library.
+- @ref containeranalysis-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/container-analysis
 
