--- a/google/cloud/datamigration/doc/main.dox
+++ b/google/cloud/datamigration/doc/main.dox
@@ -38,6 +38,7 @@ application.
 - @ref datamigration-override-retry - describes how to change the default retry
   policies.
 - @ref datamigration-env - describes environment variables that can configure the behavior of the library.
+- @ref datamigration-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/database-migration
 
