--- a/google/cloud/dataplex/doc/main.dox
+++ b/google/cloud/dataplex/doc/main.dox
@@ -49,6 +49,7 @@ application.
 - @ref dataplex-override-retry - describes how to change the default retry
   policies.
 - @ref dataplex-env - describes environment variables that can configure the behavior of the library.
+- @ref dataplex-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/dataplex
 
