--- a/google/cloud/dataproc/doc/main.dox
+++ b/google/cloud/dataproc/doc/main.dox
@@ -53,6 +53,7 @@ application.
 - @ref dataproc-override-retry - describes how to change the default retry
   policies.
 - @ref dataproc-env - describes environment variables that can configure the behavior of the library.
+- @ref dataproc-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/dataproc
 
