--- a/google/cloud/dialogflow_es/doc/main.dox
+++ b/google/cloud/dialogflow_es/doc/main.dox
@@ -64,6 +64,7 @@ application.
 - @ref dialogflow_es-override-retry - describes how to change the default retry
   policies.
 - @ref dialogflow_es-env - describes environment variables that can configure the behavior of the library.
+- @ref dialogflow_es-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/dialogflow/es/docs
 
