--- a/google/cloud/documentai/doc/main.dox
+++ b/google/cloud/documentai/doc/main.dox
@@ -39,6 +39,7 @@ application.
 - @ref documentai-override-retry - describes how to change the default retry
   policies.
 - @ref documentai-env - describes environment variables that can configure the behavior of the library.
+- @ref documentai-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/document-ai
 
