--- a/google/cloud/eventarc/doc/main.dox
+++ b/google/cloud/eventarc/doc/main.dox
@@ -44,6 +44,7 @@ application.
 - @ref eventarc-override-retry - describes how to change the default retry
   policies.
 - @ref eventarc-env - describes environment variables that can configure the behavior of the library.
+- @ref eventarc-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/eventarc
 
