--- a/google/cloud/gkehub/doc/main.dox
+++ b/google/cloud/gkehub/doc/main.dox
@@ -39,6 +39,7 @@ application.
 - @ref gkehub-override-retry - describes how to change the default retry
   policies.
 - @ref gkehub-env - describes environment variables that can configure the behavior of the library.
+- @ref gkehub-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/anthos
 
