--- a/google/cloud/iap/doc/main.dox
+++ b/google/cloud/iap/doc/main.dox
@@ -44,6 +44,7 @@ application.
 - @ref iap-override-retry - describes how to change the default retry
   policies.
 - @ref iap-env - describes environment variables that can configure the behavior of the library.
+- @ref iap-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/iap
 
