--- a/google/cloud/memcache/doc/main.dox
+++ b/google/cloud/memcache/doc/main.dox
@@ -39,6 +39,7 @@ application.
 - @ref memcache-override-retry - describes how to change the default retry
   policies.
 - @ref memcache-env - describes environment variables that can configure the behavior of the library.
+- @ref memcache-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/memorystore/docs/memcached
 
