--- a/google/cloud/networkconnectivity/doc/main.dox
+++ b/google/cloud/networkconnectivity/doc/main.dox
@@ -48,6 +48,7 @@ application.
 - @ref networkconnectivity-override-retry - describes how to change the default retry
   policies.
 - @ref networkconnectivity-env - describes environment variables that can configure the behavior of the library.
+- @ref networkconnectivity-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/network-connectivity/docs
 
