--- a/google/cloud/networkmanagement/doc/main.dox
+++ b/google/cloud/networkmanagement/doc/main.dox
@@ -39,6 +39,7 @@ application.
 - @ref networkmanagement-override-retry - describes how to change the default retry
   policies.
 - @ref networkmanagement-env - describes environment variables that can configure the behavior of the library.
+- @ref networkmanagement-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/network-intelligence-center/docs/connectivity-tests/concepts/overview
 
