--- a/google/cloud/orgpolicy/doc/main.dox
+++ b/google/cloud/orgpolicy/doc/main.dox
@@ -38,6 +38,7 @@ application.
 - @ref orgpolicy-override-retry - describes how to change the default retry
   policies.
 - @ref orgpolicy-env - describes environment variables that can configure the behavior of the library.
+- @ref orgpolicy-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/resource-manager/docs/organization-policy/overview
 
