--- a/google/cloud/osconfig/doc/main.dox
+++ b/google/cloud/osconfig/doc/main.dox
@@ -46,6 +46,7 @@ application.
 - @ref osconfig-override-retry - describes how to change the default retry
   policies.
 - @ref osconfig-env - describes environment variables that can configure the behavior of the library.
+- @ref osconfig-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/compute/docs/os-configuration-management
 
