--- a/google/cloud/recommender/doc/main.dox
+++ b/google/cloud/recommender/doc/main.dox
@@ -39,6 +39,7 @@ application.
 - @ref recommender-override-retry - describes how to change the default retry
   policies.
 - @ref recommender-env - describes environment variables that can configure the behavior of the library.
+- @ref recommender-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/recommender
 
