--- a/google/cloud/resourcemanager/doc/main.dox
+++ b/google/cloud/resourcemanager/doc/main.dox
@@ -50,6 +50,7 @@ application.
 - @ref resourcemanager-override-retry - describes how to change the default retry
   policies.
 - @ref resourcemanager-env - describes environment variables that can configure the behavior of the library.
+- @ref resourcemanager-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-product]: https://cloud.google.com/resource-manager
 
