--- a/google/cloud/retail/doc/main.dox
+++ b/google/cloud/retail/doc/main.dox
@@ -54,6 +54,7 @@ application.
 - @ref retail-override-retry - describes how to change the default retry
   policies.
 - @ref retail-env - describes environment variables that can configure the behavior of the library.
+- @ref retail-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/retail/docs
 
