--- a/google/cloud/run/doc/main.dox
+++ b/google/cloud/run/doc/main.dox
@@ -56,6 +56,7 @@ application.
 - @ref run-override-retry - describes how to change the default retry
   policies.
 - @ref run-env - describes environment variables that can configure the behavior of the library.
+- @ref run-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/run
 
