--- a/google/cloud/securitycenter/doc/main.dox
+++ b/google/cloud/securitycenter/doc/main.dox
@@ -44,6 +44,7 @@ application.
 - @ref securitycenter-override-retry - describes how to change the default retry
   policies.
 - @ref securitycenter-env - describes environment variables that can configure the behavior of the library.
+- @ref securitycenter-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/security-command-center
 
