--- a/google/cloud/servicecontrol/doc/main.dox
+++ b/google/cloud/servicecontrol/doc/main.dox
@@ -46,6 +46,7 @@ application.
 - @ref servicecontrol-override-retry - describes how to change the default retry
   policies.
 - @ref servicecontrol-env - describes environment variables that can configure the behavior of the library.
+- @ref servicecontrol-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/service-control
 
