--- a/google/cloud/serviceusage/doc/main.dox
+++ b/google/cloud/serviceusage/doc/main.dox
@@ -39,6 +39,7 @@ application.
 - @ref serviceusage-override-retry - describes how to change the default retry
   policies.
 - @ref serviceusage-env - describes environment variables that can configure the behavior of the library.
+- @ref serviceusage-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service]: https://cloud.google.com/service-usage
 
