--- a/google/cloud/sql/doc/main.dox
+++ b/google/cloud/sql/doc/main.dox
@@ -57,6 +57,7 @@ application.
 - @ref sql-override-retry - describes how to change the default retry
   policies.
 - @ref sql-env - describes environment variables that can configure the behavior of the library.
+- @ref sql-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/sql
 
