--- a/google/cloud/talent/doc/main.dox
+++ b/google/cloud/talent/doc/main.dox
@@ -48,6 +48,7 @@ application.
 - @ref talent-override-retry - describes how to change the default retry
   policies.
 - @ref talent-env - describes environment variables that can configure the behavior of the library.
+- @ref talent-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/solutions/talent-solution
 
