--- a/google/cloud/trace/doc/main.dox
+++ b/google/cloud/trace/doc/main.dox
@@ -47,6 +47,7 @@ application.
 - @ref trace-override-retry - describes how to change the default retry
   policies.
 - @ref trace-env - describes environment variables that can configure the behavior of the library.
+- @ref trace-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/trace
 
