--- a/google/cloud/video/doc/main.dox
+++ b/google/cloud/video/doc/main.dox
@@ -52,6 +52,7 @@ application.
 - @ref video-override-retry - describes how to change the default retry
   policies.
 - @ref video-env - describes environment variables that can configure the behavior of the library.
+- @ref video-override-universe-domain - describes how to override the default universe domain.
 
 [livestream-service-docs]: https://cloud.google.com/livestream
 [transcoder-service-docs]: https://cloud.google.com/transcoder
