--- a/google/cloud/videointelligence/doc/main.dox
+++ b/google/cloud/videointelligence/doc/main.dox
@@ -40,6 +40,7 @@ application.
 - @ref videointelligence-override-retry - describes how to change the default retry
   policies.
 - @ref videointelligence-env - describes environment variables that can configure the behavior of the library.
+- @ref videointelligence-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/videointelligence
 
