--- a/google/cloud/vmmigration/doc/main.dox
+++ b/google/cloud/vmmigration/doc/main.dox
@@ -38,6 +38,7 @@ application.
 - @ref vmmigration-override-retry - describes how to change the default retry
   policies.
 - @ref vmmigration-env - describes environment variables that can configure the behavior of the library.
+- @ref vmmigration-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/migrate/compute-engine
 
