--- a/google/cloud/workstations/doc/main.dox
+++ b/google/cloud/workstations/doc/main.dox
@@ -41,6 +41,7 @@ application.
 - @ref workstations-override-retry - describes how to change the default retry
   policies.
 - @ref workstations-env - describes environment variables that can configure the behavior of the library.
+- @ref workstations-override-universe-domain - describes how to override the default universe domain.
 
 [cloud-service-docs]: https://cloud.google.com/workstations
 
