--- a/google/cloud/pubsub/doc/pubsub-main.dox
+++ b/google/cloud/pubsub/doc/pubsub-main.dox
@@ -113,8 +113,8 @@ Follow these links to find examples for other `*Client` classes:
 @page pubsub-universe-domain-example Override the default universe domain
 
 In some cases, you may need to override the default universe domain used by the
-client library. Use the `google::cloud::AddUniverseDomainOption` when
-initializing the client library to change this default.
+client library. Use `AddUniverseDomainOption` when initializing the client
+library to change this default.
 
 @snippet client_samples.cc publisher-set-universe-domain
 
